[project]
name = "rag-pdf"
package-mode = false
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus Silva",email = "matjsz42@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pymilvus (>=2.5.8,<3.0.0)",
    "langgraph (>=0.4.5,<0.5.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "openai (>=1.78.1,<2.0.0)",
    "pdfplumber (>=0.11.6,<0.12.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pymupdf (>=1.25.5,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "instructorembedding (>=1.0.1,<2.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "langchain-openai (>=0.3.17,<0.4.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "randomname (>=0.2.1,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
